scss/post.scss
/* ... */
  

#page-local-dta-pages-experiences-view{
  @media screen and (max-width: 1199px){
    .experience-first-col{
      order: 1;
    }
  }
  @media screen and (min-width: 1200px){
    .experience-card-module .card-body{
      overflow: auto;
      max-height: 380px;
    }
  }
}

.custom-searchbar{
    display: flex;
    line-height: 28px;
    align-items: center;
    position: relative;
    width: 100%;
  
  .input {
    width: 100%;
    height: 40px;
    line-height: 28px;
    padding: 0 1rem;
    padding-left: 2.5rem;
    border: 2px solid transparent;
    border-radius: 8px;
    outline: none;
    background-color: #f3f3f4;
    color: #0d0c22;
    transition: 0.3s ease;
  }
  
  .input::placeholder {
    color: #9e9ea7;
  }
  
  .input:focus,
  .input:hover {
    outline: none;
    border-color: rgba(0, 48, 73, 0.4);
    background-color: #fff;
    box-shadow: 0 0 0 4px rgb(0 48 73 / 10%);
  }
  
  .icon {
    position: absolute;
    left: 1rem;
    fill: #9e9ea7;
    width: 1rem;
    height: 1rem;
  }  
}


.people-nearby .nearby-user{
  padding: 20px 0;
  border-top: 1px solid #f1f2f2;
  border-bottom: 1px solid #f1f2f2;
  margin-bottom: 20px;
}

.people-nearby img.profile-photo-lg{
  height: 80px;
  width: 80px;
  max-width: 100%;
  height: auto;
  border-radius: 50%;
}

.experience-tags {
  .tags-list {
    list-style: none;
    margin: 0;
    overflow: hidden; 
    padding: 0;
    font-size: 9px;
  }

  .tags-list li {
      float: left; 
  }

  .tag-basic {
      background: #eee;
      border-radius: 3px 0 0 3px;
      color: #999;
      display: inline-block;
      height: 26px;
      line-height: 26px;
      padding: 0 20px 0 23px;
      position: relative;
      text-decoration: none;
      -webkit-transition: color 0.2s;
  }

  .tag-basic::before {
      background: #fff;
      border-radius: 10px;
      box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
      content: '';
      height: 6px;
      left: 10px;
      position: absolute;
      width: 6px;
      top: 10px;
  }

  .tag-basic::after {
      background: #fff;
      border-bottom: 13px solid transparent;
      border-left: 10px solid #eee;
      border-top: 13px solid transparent;
      content: '';
      position: absolute;
      right: 0;
      top: 0;
  }

  .tag-basic:hover {
      background-color: $accentcolor;
      color: white;
  }

  .tag-basic:hover::after {
      border-left-color: $accentcolor; 
  }
}

.experiences-view {


  .experience-card {
    background: #fff;
    border-radius: 1rem;
    padding: 1rem;
    margin: 1rem 0;
    font-size: 0.85rem;
    line-height: 1.5;

    a {
      text-decoration: none;
    }
  }

  .exp-card-head {
    display: flex;
    justify-content: start;
  }

  .exp-card-body {
    overflow: hidden;
    margin: 0.7rem 0;
    display: flex;
    max-height: 200px;

    .exp-img-container {
      min-width: 250px;
      max-width: 250px;
      min-height: 200px;
      max-height: 200px;
      border-radius: 1rem;
      margin-right: 1rem;
      object-fit: cover;
    }

    img {
      display: block;
      border-radius: 1rem;
      height: 100%;
      width: 100%;
    }

  }

  .exp-card-action-btns {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 1.2rem;
  }
}

.summary-carousel{
  .container {
    height: 85%;
    max-height: 417px;
    width: 100%;
    border-radius: 1em;
    overflow: hidden;
    box-shadow: 0 10px 20px #dbdbdb;
    font-family: sans-serif;
  }
  
  .palette {
    display: flex;
    height: 95%;
    width: 100%;
  }
  
  .color {
    height: 100%;
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    font-weight: 600;
    letter-spacing: 1px;
    transition: flex 0.1s linear;
  }
  
  .color span {
    opacity: 0;
    transition: opacity 0.1s linear;
    border-radius: 0.5em;
    padding: 0.5em 1em;
    backdrop-filter: blur(8px);
    
    
  }
  
  .color:nth-child(1) {
    backdrop-filter: blur(10px);
    background: url("https://digitalta.eu/wp-content/uploads/2023/12/portada.png") no-repeat center center;
    background-size: cover;
    
    /*background: #264653;*/
  }
  
  .color:nth-child(2) {
    background: url("https://digitalta.eu/wp-content/uploads/2023/10/Erasmus-Days.png") no-repeat center center;
    background-size: cover;
    /*background: #2a9d8f;*/
  }
  
  .color:nth-child(3) {
    background: url("https://digitalta.eu/wp-content/uploads/2023/09/Jiri-Kropac.png") no-repeat center center;
    background-size: cover;
    /*background: #e9c46a;*/
  }
  
  .color:nth-child(4) {
    background: url("https://digitalta.eu/wp-content/uploads/2023/06/IMG_6148-1-1.jpg") no-repeat center center;
    background-size: cover;
    /*background: #f4a261;*/
  }
  
  .color:nth-child(5) {
    background: url("https://digitalta.eu/wp-content/uploads/2022/12/cover-uneatlantico.jpg") no-repeat center center;
    background-size: cover;
    /*background: #e76f51;*/
  }
  
  .color:hover {
    flex: 10;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  }
  
  .color:hover span {
    opacity: 1;
  }
  
  .h-exp-title {
    opacity: 1;
  }
}

